
PLIB v1.3.1 (??)
~~~~~~~~~~~~~~~~

  * Added 'UL' library.  Applications MUST link to
    -lplibul  (/usr/lib/libplibul.a) - and should
    include <plib/ul.h> and call ulInit() before
    making UL calls.

    If you use automake/autoconf, then it's easy
    to make applications that will compile and link
    under both PLIB 1.2 and 1.3/1.4, just add this:

    AC_CHECK_LIB(plibul, ulInit,,,)

PLIB v1.3.0 (July 1st 2000)
~~~~~~~~~~~~~~~~~~~~~~~~~~~

  * Unstable version of 1.2.0, no significant code
    changes.

PLIB v1.2.0 (July 1st 2000)
~~~~~~~~~~~~~~~~~~~~~~~~~~~

  * Stable version of 1.1.12, no significant code
    changes.

PLIB v1.1.12 (June 24th 2000)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  * Fixed some compilation problems for Macintosh/Codewarrior
    which treats 'xor' and 'or' as reserved words!! Yikes!
    Thanks to Darrell Walisser for that piece of nasty news.

  * Fixed some problems in slMODinst.cxx that were causing
    compilation warnings under windoze (thanks to Bram Stolk)

  * Changed SL to open audio devices with O_NONBLOCK -
    thanks to Trent Gamblin for spotting this one.

  * Added configure.in check for libdl to cover bug in ld.so
    under Linux.  Application programs under Linux need to
    link to libdl.so in order to work around this.
    Ben Woodhead <zander@isn.net> added this.

  * Added Borland project files, thanks to Dave Heil for
    contributing these.

  * Swapped order of multiplication in sgMultMat4. Thanks to
    Lucas Ackerman for spotting this one.

  * Added a unique ID field to every node in the scene graph.
    This helps out some picking algorithms in PPE.

  * Added some more ifdefs to make PLIB Audio/JS components
    to make them work under NetBSD. (They already work with
    FreeBSD and OpenBSD).  Many thanks to Rene Hexel!

  * Fixed a ref() problem with ssgVtxTable::clone - thanks
    to Will Weisser for catching that one!

  * Added checks to ensure that a valid OpenGL rendering